# D2DraftNet

./: README.md  match_data.parquet  pyproject.toml
d2draftnet/: __init__.py  collect_data0.py  collect_data2.py  collect_data3.py  collect_match_data.py  collect_match_ids.py  collect_selenium.py  config.py  embedding_model.py  predict_embedding_model.py  remove_repeats.py  train_embedding_model.py  view_match_data.py
d2draftnet/models/: 7_39b_model.pth  test_model.pth
data/: 7_38b_match_data.parquet  7_38c_match_data.parquet  7_39b_match_data.parquet  7_39c_match_data.parquet  match_data.parquet
src/d2draftnet/: config.py  embedding_model.py  odds_calculator.py  plot_test.py  predict_embedding_model.py  train_embedding_model.py  view_match_data.py
src/d2draftnet/.old/: collect_data0.py  collect_data1.py  collect_data_old.py
src/d2draftnet/models/: 7_39b_model.pth
tests/: test_file.py
